deployment_ai.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ai-service
  template:
    metadata:
      labels:
        app: ai-service
    spec:
      containers:
        - name: ai-service
          image: us-central1-docker.pkg.dev/bug-tracking-477517/bug-tracker-repo/bug-tracking-ai:v1
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: ai-service
spec:
  type: ClusterIP
  selector:
    app: ai-service
  ports:
    - name: http
      port: 5001
      targetPort: 5001
