ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bug-tracker-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    ingress.gcp.kubernetes.io/backends-config: |
      {"default":"", "ports":{"80":"frontend-service"}}
    ingress.gcp.kubernetes.io/path-prefix-rewrite: |
      {
        "/api/(.*)": "/$1",
        "/ai/(.*)": "/$1"
      }
spec:
  rules:
    - http:
        paths:
          - path: /ai/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: ai-service
                port:
                  number: 5001
          - path: /api/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
    service:
                name: frontend-service
      port:
                  number: 80
